--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <!-- 1. LUXURY FAVICON (Ensure you put your logo in the public folder as JSP.png) -->
-    <link rel="icon" href="%PUBLIC_URL%/JSP.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#050505" />
+<head>
+  <meta charset="utf-8" />
 
-    <!-- 2. SEO & META TAGS -->
-    <title>Siddhi Homes | Crafting Luxury Legacies</title>
-    <meta name="description" content="Siddhi Homes specializes in premium architectural masterpieces, luxury villas, and high-end residential living. Witness the synthesis of comfort and elegance." />
-    <meta name="keywords" content="Siddhi Homes, Luxury Villas, Real Estate, Premium Architecture, Modern Home Design" />
-    <meta name="author" content="Siddhi Homes" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/client-logo.png" />
 
-    <!-- 3. OPEN GRAPH (For professional looking links on WhatsApp/Facebook/LinkedIn) -->
-    <meta property="og:title" content="Siddhi Homes | Luxury Real Estate" />
-    <meta property="og:description" content="Discover architectural masterpieces and premium living spaces designed for your legacy." />
-    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" /> <!-- Recommended: add a nice project photo here -->
-    <meta property="og:type" content="website" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0a0a0a" />
 
-    <!-- 4. PREMIUM GOOGLE FONTS -->
-    <!-- Playfair Display (Luxury Serif) & Poppins (Modern Sans-Serif) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;0,900;1,700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <!-- SEO -->
+  <title>Siddhi Homes | Luxury Villas & Premium Real Estate in India</title>
 
-    <!-- 5. MANIFEST & APPLE ICONS -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="description"
+    content="Siddhi Homes crafts ultra-luxury villas and premium residential spaces with world-class architecture and timeless elegance." />
 
-    <style>
-      /* Quick Smooth Loading Background */
-      body {
-        margin: 0;
-        background-color: #050505; /* Matches your luxury dark theme */
-        overflow-x: hidden;
-      }
-      /* Prevent FOUC (Flash of Unstyled Content) */
-      #root {
-        min-height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to view the Siddhi Homes Experience.</noscript>
-    
-    <div id="root"></div>
+  <meta name="keywords"
+    content="Siddhi Homes, Luxury Villas India, Premium Real Estate, High End Homes, Modern Architecture" />
 
-    <!-- 
-      Siddhi Homes - Built with Excellence.
-      Architectural Masterpieces in the making.
-    -->
-  </body>
+  <meta name="author" content="Siddhi Homes" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Siddhi Homes | Crafting Luxury Legacies" />
+  <meta property="og:description"
+    content="Experience architectural masterpieces and ultra-modern villas designed for elegance." />
+  <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Poppins:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
+
+  <!-- Manifest (Optional) -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <style>
+    body {
+      margin: 0;
+      background-color: #0a0a0a;
+      font-family: 'Poppins', sans-serif;
+      overflow-x: hidden;
+    }
+
+    #root {
+      min-height: 100vh;
+    }
+  </style>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
